devqa/services/istio/policies/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: global
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
