devqa/services/istio/policies/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: gateway
  action: CUSTOM
  provider:
    name: "authentik"
  rules:
  - to:
    - operation:
        hosts:
        # You can create a single resource and list all Domain names here, or create multiple resources
        - "bookinfo.internal.magiccityit.com"
        - "searxng.internal.magiccityit.com"
